--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 
     <h14 class="titulo-grande">Mayven</h14>
     <div class="galeria">
+      <img src="imagenes/mayven1.jpg" alt="Mayven 1">
       <img src="imagenes/mayven2.jpg" alt="Mayven 2">
       <img src="imagenes/mayven3.jpg" alt="Mayven 3">
     </div>
