--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
-                <li><a href="#silicona">Catálogo</a></li>
+                <li><a href="#silicona">Silicona: modelos exclusivos</a></li>
                 <li><a href="#vinilo">Vinilo con cuerpo de tela</a></li>
             </ul>
         </nav>
