--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
                 <li><a href="#silicona">Silicona: modelos exclusivos</a></li>
                 <li><a href="#vinilo">Vinilo con cuerpo de tela</a></li>
+                <li><a href="#kitblanco">Kit en blanco</a></li>
             </ul>
         </nav>
     </header>
@@ -298,6 +299,30 @@
       Os dejo más ejemplos de mi trabajo en otros kits para que podáis guiarme en el proceso de encontrar vuestro bebé ideal.
       Para más información contacte por WhatsApp.
     </p>
+  </div>
+</section>
+
+<section id="kitblanco">
+  <div class="producto">
+    <h2 class="titulo-grande">Kit en blanco</h2>
+
+    <h18 class="titulo-grande">Siliconas en blanco</h18>
+    <div class="galeria">
+      <img src="imagenes/silicona2.jpg" alt="Silicona 2">
+      <img src="imagenes/silicona3.jpg" alt="Silicona 3">
+      <img src="imagenes/silicona4.jpg" alt="Silicona 4">
+      <img src="imagenes/silicona5.jpg" alt="Silicona 5">
+      <img src="imagenes/silicona6.jpg" alt="Silicona 6">
+      <img src="imagenes/silicona7.jpg" alt="Silicona 7">
+
+
+    </div>
+
+    <p class="descripcion">
+      
+    </p>
+   </div>
+   
   </div>
 </section>
 
