--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@
     </div>
 
     <p class="descripcion">
-      
+      Llegamos a la sección de las artistas, este apartado contiene mis esculturas en blanco, para que todas vosotras podais renacerlas como mas os gusten. Deseando ver vuestras obras de arte.
+      Para mas información contacte por WhatsApp.
     </p>
    </div>
    
