--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <img src="imagenes/silicona3.jpg" alt="Silicona 3">
       <img src="imagenes/silicona4.jpg" alt="Silicona 4">
       <img src="imagenes/silicona5.jpg" alt="Silicona 5">
-      <img src="imagenes/silicona6.jpg" alt="Silicona 6">
+      <img src="imagenes/silicona6.jpeg" alt="Silicona 6">
       <img src="imagenes/silicona7.jpg" alt="Silicona 7">
 
 
