actualizacion index y style

--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
     <header>
         <h1>Susus Reborn</h1>
         <nav>
-            <ul>
-                <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
-                <li><a href="#silicona">Silicona: modelos exclusivos</a></li>
-                <li><a href="#vinilo">Vinilo con cuerpo de tela</a></li>
-                <li><a href="#kitblanco">Kit en blanco</a></li>
-            </ul>
-        </nav>
+  <ul>
+    <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
+
+    <li class="dropdown">
+      <a href="#silicona">Silicona ▼</a>
+      <ul class="dropdown-content">
+        <li><a href="#ofelia">Ofelia</a></li>
+        <li><a href="#martina">Martina</a></li>
+        <li><a href="#ohana">Ohana</a></li>
+        <li><a href="#daniel">Daniel</a></li>
+        <li><a href="#silvia">Silvia</a></li>
+        <li><a href="#nana">Nana</a></li>
+        <li><a href="#noemi">Noemí</a></li>
+        <li><a href="#oreo">Oreo</a></li>
+        <li><a href="#orejotas">Orejotas</a></li>
+        <li><a href="#sully">Sully</a></li>
+      </ul>
+    </li>
+
+    <li><a href="#vinilo">Vinilo con cuerpo de tela</a></li>
+    <li><a href="#kitblanco">Kit en blanco</a></li>
+    <li><a href="#cursos">Cursos</a></li>
+  </ul>
+</nav>
     </header>
 
     <section id="quienes-somos">
@@ -39,7 +56,7 @@
     <section id="silicona">
         <h2>Silicona: modelos exclusivos</h2>
         <div class="producto">
-            <h3 class="titulo-grande">Ofelia</h3>
+            <h3 id="ofelia" class="titulo-grande">Ofelia</h3>
             <div class="galeria">
                 <img src="imagenes/ofelia1.jpg" alt="Ofelia 1">
                 <img src="imagenes/ofelia2.jpg" alt="Ofelia 2">
@@ -61,7 +78,7 @@
             </p>
         </div>
          <div class="producto">
-            <h4 class="titulo-grande">Martina</h4>
+            <h4 id="martina" class="titulo-grande">Martina</h4>
             <div class="galeria">
                 <img src="imagenes/martina1.jpg" alt="Martina 1">
                 <img src="imagenes/martina2.jpg" alt="Martina 2">
@@ -82,7 +99,7 @@
             </p>
         </div>
         <div class="producto">
-            <h5 class="titulo-grande">Ohana</h5>
+            <h5 id="ohana" class="titulo-grande">Ohana</h5>
             <div class="galeria">
                 <img src="imagenes/ohana1.jpg" alt="Ohana 1">
                 <img src="imagenes/ohana2.jpg" alt="Ohana 2">
@@ -102,7 +119,7 @@
             </p>
         </div>
          <div class="producto">
-            <h6 class="titulo-grande">Daniel</h6>
+            <h6 id="daniel" class="titulo-grande">Daniel</h6>
             <div class="galeria">
                 <img src="imagenes/daniel1.jpg" alt="Daniel 1">
                 <img src="imagenes/daniel2.jpg" alt="Daniel 2">
@@ -123,7 +140,7 @@
             </p>
         </div>
          <div class="producto">
-            <h7 class="titulo-grande">Silvia</h7>
+            <h7 id="silvia" class="titulo-grande">Silvia</h7>
             <div class="galeria">
                 <img src="imagenes/silvia1.jpg" alt="Silvia 1">
                 <img src="imagenes/silvia2.jpg" alt="Silvia 2">
@@ -143,7 +160,7 @@
             </p>
         </div>
          <div class="producto">
-            <h8 class="titulo-grande">Nana</h8>
+            <h8 id="nana" class="titulo-grande">Nana</h8>
             <div class="galeria">
                 <img src="imagenes/nana1.jpg" alt="Nana 1">
                 <img src="imagenes/nana2.jpg" alt="Nana 2">
@@ -161,7 +178,7 @@
             </p>
         </div>
          <div class="producto">
-            <h9 class="titulo-grande">Noemi</h9>
+            <h9 id="noemi" class="titulo-grande">Noemi</h9>
             <div class="galeria">
                 <img src="imagenes/noemi1.jpg" alt="Noemi 1">
                 <img src="imagenes/noemi2.jpg" alt="Noemi 2">
@@ -176,7 +193,7 @@
             </p>
         </div>
          <div class="producto">
-            <h10 class="titulo-grande">Oreo</h10>
+            <h10 id="oreo" class="titulo-grande">Oreo</h10>
             <div class="galeria">
                 <img src="imagenes/oreo1.jpg" alt="Oreo 1">
                 <img src="imagenes/oreo2.jpg" alt="Oreo 2">
@@ -196,7 +213,7 @@
             </p>
         </div>
          <div class="producto">
-            <h11 class="titulo-grande">Orejotas </h11>
+            <h11 id="orejotas" class="titulo-grande">Orejotas </h11>
             <div class="galeria">
                 <img src="imagenes/orejotas1.jpg" alt="Orejotas 1">
                 <img src="imagenes/orejotas2.jpg" alt="Orejotas 2">
@@ -210,7 +227,7 @@
             </p>
         </div>
          <div class="producto">
-            <h12 class="titulo-grande">Hamtaro</h12>
+            <h12 id="hamtaro" class="titulo-grande">Hamtaro</h12>
             <div class="galeria">
                 <img src="imagenes/hamtaro1.jpg" alt="Hamtaro 1">
                 <img src="imagenes/hamtaro2.jpg" alt="Hamtaro 2">
@@ -223,7 +240,7 @@
             </p>
         </div>
           <div class="producto">
-            <h13 class="titulo-grande">Sully</h13>
+            <h13 id="sully" class="titulo-grande">Sully</h13>
             <div class="galeria">
                 <img src="imagenes/sully1.jpg" alt="Sully 1">
                 <img src="imagenes/sully2.jpg" alt="Sully2">
