--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head id="inicio">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Susus Reborn</title>
@@ -349,9 +349,20 @@
             <a href="https://tiktok.com/@sususreborn" target="_blank">TikTok</a>
         </p>
     </footer>
-
+<a href="https://www.instagram.com/susus_reborn/" class="social-float instagram" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+</a>
+<a href="https://www.facebook.com/sususreborn" class="social-float facebook" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="Facebook">
+</a>
+<a href="https://www.tiktok.com/@sususreborn" class="social-float tiktok" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
+</a>
     <a href="https://wa.me/34653925967" class="whatsapp-float" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
+    <a href="#inicio" class="inicio-float" title="Volver al inicio">
+  <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="Inicio" />
+</a>
 </body>
 </html>
