--- a/index.html
+++ b/index.html
@@ -349,19 +349,21 @@
             <a href="https://tiktok.com/@sususreborn" target="_blank">TikTok</a>
         </p>
     </footer>
-<a href="https://www.instagram.com/susus_reborn/" class="social-float instagram" target="_blank">
-  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
-</a>
-<a href="https://www.facebook.com/sususreborn" class="social-float facebook" target="_blank">
-  <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="Facebook">
-</a>
-<a href="https://www.tiktok.com/@sususreborn" class="social-float tiktok" target="_blank">
-  <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
-</a>
+<div class="redes-flotantes">
+  <a href="https://www.instagram.com/susus_reborn" target="_blank" title="Instagram">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
+  </a>
+  <a href="https://www.facebook.com/Susu´s Reborn" target="_blank" title="Facebook">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+  </a>
+  <a href="https://www.tiktok.com/@sususreborn" target="_blank" title="TikTok">
+    <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok" />
+  </a>
+</div>
     <a href="https://wa.me/34653925967" class="whatsapp-float" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
-    <a href="#inicio" class="inicio-float" title="Volver al inicio">
+   <a href="#inicio" class="inicio-float" title="Volver al inicio">
   <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="Inicio" />
 </a>
 </body>
